fix table details spacing between nav

--- a/app/javascript/src/pages/_table-details.scss
+++ b/app/javascript/src/pages/_table-details.scss
@@ -74,6 +74,7 @@
 }
 
 .table-details__title {
+  margin-right: spacing(4);
   max-width: rem(750px);
   order: 2;
 
@@ -89,6 +90,7 @@
 }
 
 .table-details__comments {
+  margin-right: spacing(4);
   max-width: rem(750px);
   order: 4;
 
